--- a/src/main/java/Interfaces/Vehiculos.form
+++ b/src/main/java/Interfaces/Vehiculos.form
@@ -602,7 +602,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="30" y="470" width="900" height="260"/>
+              <AbsoluteConstraints x="30" y="460" width="900" height="260"/>
             </Constraint>
           </Constraints>
 
@@ -610,8 +610,12 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="panel">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
+                </Property>
               </Properties>
             </Component>
           </SubComponents>
